--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TODO - backbone</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js" type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.16/backbone.localStorage-min.js" type="text/javascript"></script>  
- 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TODO - backbone</title>
+  <link href="style.css" rel="stylesheet" type="text/css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"
+    type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"
+    type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.16/backbone.localStorage-min.js"
+    type="text/javascript"></script>
+
 </head>
+
 <body>
+
   <script type="text/template" id="template">
-    <label class=<%= complete ? 'cross' : '' %>><input id="toggle" type="checkbox"  <%= complete ? 'checked' : '' %>>   <%= title %><label>
+    <label class=<%= complete ? 'cross' : '' %>><input id="toggle" type="checkbox"  <%= complete ? 'checked' : '' %>> <%= title %><label>
+  </script>
+
+  <script type="text/template" id="templateFooter">
+    <div class="left">
+      <input type="button" value="Add" id="Add" class=<%= mod ? 'active' : '' %>>
+      <input type="button" value="Search" id="Search" class=<%= mod ? 'active' : '' %>>
+      <input type="button" value="Default" id="default">
+    </div>
+    <p id="left"></p>
+    <div class="right">
+        <input type="button" value="All" id="All" class="active">
+        <input type="button" value="Active" id="Active"> 
+        <input type="button" value="Completed" id="Completed">
+    </div> 
+
   </script>
   <section id="container">
-      <h1>THINGS TO DO</h1>
-      <input type="text" id='text' placeholder="Add New">
-      <ul></ul>
-      <div id="footer">
+    <h1>THINGS TO DO</h1>
+    <input type="text" id='text' placeholder="Add New">
+    <ul></ul>
+    <!--  <div id="footer">
         <div class="left">
           <input type="button" value="Add" id="add" class="active">
           <input type="button" value="Search" id="search">
@@ -31,9 +52,10 @@
             <input type="button" value="Active" id="Active"> 
             <input type="button" value="Completed" id="Completed">
         </div>
-      </div>
-      <p></p>
+      </div> -->
+    <p></p>
   </section>
   <script src="MainApp.js" type="module"></script>
 </body>
+
 </html>
