--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
   <script type="text/template" id="templateFooter">
     <div class="left">
-      <input type="button" value="Add" id="Add" class=<%= mod ? 'active' : '' %>>
-      <input type="button" value="Search" id="Search" class=<%= mod ? 'active' : '' %>>
+      <input type="button" value="Add" id="Add" >
+      <input type="button" value="Search" id="Search">
       <input type="button" value="Default" id="default">
     </div>
     <p id="left"></p>
     <div class="right">
-        <input type="button" value="All" id="All" class="active">
+        <input type="button" value="All" id="All">
         <input type="button" value="Active" id="Active"> 
         <input type="button" value="Completed" id="Completed">
     </div> 
