--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-React</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-  <!--   <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script> -->
     <script src="https://unpkg.com/@babel/standalone@7.12.12/babel.min.js"></script>
   </head>
 
-<body>
+<body style='background-color: #eee'>
     <section id="app"></section>
 
     <script src="dist/bundle.js" type="text/babel"></script>
